--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "styled-components": "^6.1.15",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
